--- a/app/sass/pages/contact-page.sass
+++ b/app/sass/pages/contact-page.sass
@@ -18,6 +18,8 @@
 
 .information
    margin-bottom: 10rem
+   @media screen and ( max-width: 800px )
+      padding: 0 1rem
    .section-title
       margin-bottom: 3.66rem
    &__content
@@ -25,8 +27,17 @@
          display: flex
          flex-direction: row
          justify-content: center
+         @media screen and ( max-width: 430px )
+            flex-direction: column
+            text-align: center
          &__item
             width: calc( (100% - 340px) / 2  )
+            @media screen and ( max-width: 750px )
+               width: calc( (100% - 200px) / 2  )
+            @media screen and ( max-width: 480px )
+               width: calc( (100% - 130px) / 2  )
+            @media screen and ( max-width: 430px )
+               width: 100%
             span, a, i
                font-size: 1rem
                font-family: 'Jost'
@@ -38,13 +49,25 @@
                display: inline-block
          .inf-phone
             text-align: right
+            @media screen and ( max-width: 430px )
+               text-align: center
+               margin-bottom: 2rem
          .inf-email
             width: 340px
             text-align: center
+            @media screen and ( max-width: 750px )
+               width: 200px
+            @media screen and ( max-width: 480px )
+               width: 130px
+            @media screen and ( max-width: 430px )
+               width: 100%
+               margin-bottom: 2rem
             a
                color: $blue
          .inf-time
             text-align: left
+            @media screen and ( max-width: 430px )
+               text-align: center
             i
                color: $blue
          .inf-title
@@ -56,6 +79,8 @@
 
 
 .question-form
+   @media screen and ( max-width: 800px )
+      padding: 0 2rem
    &__content
       .comment-form
          text-align: center
