--- a/app/sass/pages/product-single-page.sass
+++ b/app/sass/pages/product-single-page.sass
@@ -21,6 +21,14 @@
 .small-container
    max-width: 780px
    margin: 0 auto
+   @media screen and ( max-width: 992px )
+      max-width: 720px
+      padding-right: 15px
+      padding-left: 15px
+   @media screen and ( max-width: 768px )
+      max-width: 540px
+      padding-right: 15px
+      padding-left: 15px
 
 .information-product
    width: 100%
