--- a/app/sass/_elements.sass
+++ b/app/sass/_elements.sass
@@ -123,6 +123,8 @@
    border: none
    border-radius: 0
    transition: all 0.3s ease
+   i
+      font-style: normal
    &:hover
       background: $blue
       color: $white
