--- a/app/sass/pages/answer-questions-page.sass
+++ b/app/sass/pages/answer-questions-page.sass
@@ -24,12 +24,21 @@
       flex-direction: row
       justify-content: space-between
       align-items: center
+      @media screen and ( max-width: 768px )
+         flex-direction: column
+         justify-content: center
       &__frame
          width: 620px
          height: 366px
          background: $blue-light
+         @media screen and ( max-width: 768px )
+            width: 100%
+            height: 300px
       &__plane
          margin-right: 3rem
+         @media screen and ( max-width: 768px )
+            margin-right: 0
+            margin-bottom: 3rem
          p
             color: $dark-light
             a
@@ -55,7 +64,7 @@
 .mixed-block
    margin-bottom: 10rem
    &__item
-      width: 780px
+      max-width: 780px
       margin: 0 auto
       margin-bottom: 6rem
       &:last-child
@@ -74,17 +83,33 @@
          height: 500px
          background: $blue-light
          display: block
+         @media screen and ( max-width: 1050px )
+            width: 450px
+            height: 380px
+         @media screen and ( max-width: 992px )
+            width: 100%
+            height: 300px
+            margin-bottom: 3rem
       &__plane
          max-width: calc( 100% - 620px - 3rem )
          margin-left: 3rem
+         @media screen and ( max-width: 1050px )
+            max-width: calc( 100% - 450px - 3rem )
+         @media screen and ( max-width: 768px )
+            max-width: 100%
+            margin-left: 0
          p
             color: $dark-light
             a
                color: $blue
                text-decoration: underline
    &__frame
-      width: 100%
+      max-width: 100%
       display: flex
       flex-direction: row
       justify-content: space-between
       align-items: center
+      @media screen and ( max-width: 768px )
+         flex-direction: column
+         justify-content: center
+         
