--- a/app/sass/pages/user-profile-page.sass
+++ b/app/sass/pages/user-profile-page.sass
@@ -28,11 +28,16 @@
 .user__content
    .user__content__flex
       display: flex
+      @media screen and ( max-width: 992px )
+         flex-direction: column
    &__menu
       width: 250px
       padding: 2.66rem
       background: $light
       box-sizing: border-box
+      @media screen and ( max-width: 992px )
+         width: 100%
+         margin-bottom: 5rem
       .user__menu__avatar
          text-align: center
          margin-bottom: 3rem
@@ -52,6 +57,17 @@
             color: $dark-light
       .user__menu__links
          &__list
+            @media screen and ( max-width: 992px )
+               display: flex
+               flex-wrap: wrap
+               justify-content: center
+               .user__menu__links__list__item
+                  margin-right: 3rem
+            @media screen and ( max-width: 768px )
+               text-align: center
+               flex-direction: column
+               .user__menu__links__list__item
+                  margin-right: 0
             .user-current
                a
                   position: relative
@@ -77,9 +93,15 @@
 .user__content__information
    width: calc( 100% - 250px )
    margin-bottom: 15rem
+   @media screen and ( max-width: 768px )
+      width: 100%
    .user-container
       width: 670px
       margin: 0 auto
+      @media screen and ( max-width: 1200px )
+         padding: 0 3rem
+      @media screen and ( max-width: 768px )
+         width: 100%
 
 
 .user__form
