--- a/app/sass/_elements.sass
+++ b/app/sass/_elements.sass
@@ -61,6 +61,8 @@
    color: $white
    text-decoration: none
    transition: all 0.3s ease
+   i
+      font-style: normal
    &:hover
       color: $white
       background: $black
