--- a/app/sass/pages/product-single-page.sass
+++ b/app/sass/pages/product-single-page.sass
@@ -35,7 +35,15 @@
    background: $blue-light
    padding: 240px 0
    position: relative
+   @media screen and ( max-width: 1100px )
+         padding: 240px 0 50px
    &__details
+      z-index: 3
+      position: relative
+      @media screen and ( max-width: 1100px )
+         margin-top: calc( 100vw - 651px )
+      @media screen and ( max-width: 768px )
+         margin-top: 245px
       .medium-fiveteen, .lights-fiveteen
          letter-spacing: 0
       .details__breadcrumbs
@@ -50,6 +58,10 @@
                   font-family: 'Jost'
                   font-weight: 300
                   color: $dark-light
+                  @media screen and ( max-width: 1100px )
+                     color: $white
+                  @media screen and ( max-width: 768px )
+                     color: $dark-light
                   &::after
                      content: '/'
                      margin: 0 4px
@@ -61,6 +73,10 @@
       .details__h1
          width: 500px
          margin-bottom: 2rem
+         @media screen and ( max-width: 1100px )
+            color: $white
+         @media screen and ( max-width: 768px )
+            color: $dark
       .details__price
          display: flex
          flex-direction: row
@@ -118,6 +134,11 @@
             margin-right: 1rem
          .fill-button-dark
             margin-right: 1rem
+            @media screen and ( max-width: 500px )
+               span
+                  display: none
+               i
+                  text-transform: uppercase
          .details-like-button
             margin-right: 1rem
             display: flex
@@ -145,6 +166,20 @@
       width: 760px
       height: 600px
       padding: 0 80px
+      @media screen and ( max-width: 1500px )
+         width: 600px
+         height: 400px
+         padding: 0 100px
+      @media screen and ( max-width: 1100px )
+         width: 100vw
+         height: calc( 100vw - 250px)
+         padding: 0
+         top: 0px
+         right: 0
+         left: 0
+         transform: translateY(0)
+      @media screen and ( max-width: 768px )
+         height: 450px
       &:hover
          .slick-prev
             left: -10%
@@ -214,10 +249,20 @@
                height: 600px
                overflow: hidden
                position: relative
+               @media screen and ( max-width: 1500px )
+                  width: 400px
+                  height: 400px
+               @media screen and ( max-width: 1100px )
+                  width: 100vw
+                  height: calc( 100vw - 250px)
+               @media screen and ( max-width: 768px )
+                  height: 450px
                &__img
                   width: 100%
                   height: 100%
                   @incude absolute-align-center
+                  @media screen and ( max-width: 768px )
+                     width: auto
 
 
 .description-product 
