--- a/app/sass/pages/main-page.sass
+++ b/app/sass/pages/main-page.sass
@@ -261,7 +261,9 @@
       @media screen and ( max-width: 768px )
          width: 360px
          height: 360px
-
+      @media screen and ( max-width: 450px )
+         width: 280px
+         height: 280px
 
 
 .product-cart
@@ -298,6 +300,9 @@
       @media screen and ( max-width: 768px )
          width: 360px
          height: 360px
+      @media screen and ( max-width: 450px )
+         width: 280px
+         height: 280px
       .new-icon
          position: absolute
          top: 1rem
