--- a/app/sass/pages/404-page.sass
+++ b/app/sass/pages/404-page.sass
@@ -19,6 +19,8 @@
          z-index: 1
          color: $dark-light
          line-height: 200px
+         @media screen and ( max-width: 380px )
+            font-size: 10rem
       p
          color: $dark-light
          position: relative
