--- a/app/sass/pages/like-page.sass
+++ b/app/sass/pages/like-page.sass
@@ -6,6 +6,9 @@
 
 .like__content__information
    width: 100%
+   @media screen and ( max-width: 325px )
+      padding-right: 15px
+      padding-left: 15px
    .like__products__list
       &__item
          display: flex
