--- a/app/sass/pages/product-single-page.sass
+++ b/app/sass/pages/product-single-page.sass
@@ -29,6 +29,9 @@
       max-width: 540px
       padding-right: 15px
       padding-left: 15px
+   @media screen and ( max-width: 325px )
+      padding-right: 0
+      padding-left: 0
 
 .information-product
    width: 100%
