--- a/app/sass/pages/about-page.sass
+++ b/app/sass/pages/about-page.sass
@@ -72,6 +72,8 @@
    padding-top: 3rem
    @media screen and ( max-width: 992px )
       padding: 3rem 2rem 0
+   @media screen and ( max-width: 330px )
+      padding: 3rem 1rem 0
    h2
       color: $dark
       text-align: center
