--- a/app/sass/pages/user-profile-page.sass
+++ b/app/sass/pages/user-profile-page.sass
@@ -22,6 +22,9 @@
 .user__title
    padding-top: calc( 84px + 3.66rem )
    padding-bottom: 6rem
+   .section-text__title
+      @media screen and ( max-width: 385px )
+         font-size: 2.8rem
 
 
 
@@ -102,6 +105,8 @@
          padding: 0 3rem
       @media screen and ( max-width: 768px )
          width: 100%
+      @media screen and ( max-width: 400px )
+         padding: 0
 
 
 .user__form
@@ -109,7 +114,11 @@
    &__name-sur
       display: flex
       flex-direction: row
+      @media screen and ( max-width: 400px )
+         flex-direction: column
       .user-name
          margin-right: 2rem
+         @media screen and ( max-width: 400px )
+            margin-right: 0
    .el-input
       margin-bottom: 2rem
